2008-12-23 David Moore  <dcm@acm.org>
	* SVN 574: Fix Mac OS build.
	* SVN 573: Package a local copy of the juju headers so there are no
	           versioning problems with different Linux configurations.
	* SVN 572: Choose platform at run-time, not compile-time.  This
	           eliminates the --with-juju-dir configure option.
	* SVN 571: Add more error-checking to example programs

2008-12-12 David Moore  <dcm@acm.org>
	* SVN 570: Update NEWS
	* SVN 569: Update version and AUTHORS for 2.0.3.  RELEASE 2.0.3.

2008-12-05 David Moore  <dcm@acm.org>
	* SVN 568: Added AC_CANONICAL_SYSTEM to configure.in.  Thanks to
	           Tully Foote.
	* SVN 567: Fix acinclude.m4 for newer versions of autoconf
	* SVN 566: Fix image size bug in dc1394_deinterlace_stereo_frames.
	           Thanks to Maya Cakmak and Jeremy Leibs.

2008-08-28 David Moore  <dcm@acm.org>
	* SVN 565: Potential crash fix for Mac OS 10.4.  Thanks to Salvatore
	           Desiano for tracking it down.

2008-08-27 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 564: last set of blind changes.

2008-08-26 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 563: more blind fixes for the MSW port. 

2008-08-21 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 562: attempt to fix incoherences in the msw port, part 2. There
	           is still a lot of work to be done in camera detection and
		   ISO channel/bandwidth allocation. For instance, the
		   platform_* functions are inexistant in MSW.

2008-08-20 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 561: attempt to fix incoherences in the msw port.
	
2008-03-26 David Moore  <dcm@acm.org>
	* SVN 560: Fix alignment problem during reads on some platforms with
	           juju

2008-05-28 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 559: fixed wrong returned values for dc1394_trigger_get_polarity.
	           Thanks to Clement Menier.
	
2008-05-17 Damien Douxchamps http://damien.douxchamps.net/